# Wordle

./: pyproject.toml
src/WordWizard/: solver.py
