[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "solver"
version = "0.0.1"
authors = [
{ name="Mauricio de Barros", email="mdebarros@torxen.net" },
]
description="Wordle Solver package"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
"numpy",
]
classifiers = [
"Programming Language :: Python :: 3",
"Operating System :: OS Independent",
"License :: OSI Approved :: GNU General Public License v3",
]
[project.urls]
"Homepage" = "https://github.com/mcdebarros/Wordle"